<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DelayBindActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tv_delay_bind"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delay_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_delay_start" />

        <Button
            android:id="@+id/btn_delay_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/success"
            android:text="@string/btn_delay_bind" />

        <Button
            android:id="@+id/btn_delay_unbind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/warning"
            android:text="@string/btn_delay_unbind" />

        <Button
            android:id="@+id/btn_delay_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/error"
            android:text="@string/btn_delay_stop" />

        <TextView
            android:textSize="16sp"
            android:id="@+id/tv_delay_bind_msg"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>