<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataInteractionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_data_interaction_title"
            android:textColor="@color/success"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_start_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_start_bind" />

        <Button
            android:id="@+id/btn_unbind_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/error"
            android:text="@string/btn_unbind_stop" />

        <TextView
            android:id="@+id/data_interaction_msg"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>